# kicad-make

./: .buildinfo  .ci.yml  .gitignore  .gitmodules  Dockerfile  LICENSE  README.md  development.html  genindex.html  index.html  installation.html  introduction.html  objects.inv  pyproject.toml  quick-start.html  searchindex.js  usage.html
.github/workflows/: docs.yml  test.yml
_sources/: index.md.txt  introduction.md.txt  quick-start.md.txt  usage.md.txt
docs/: requirements.txt
docs/source/: conf.py  development.md  installation.md  introduction.md
src/: kmake.py
src/commands/: __init__.py  auxorigin.py  bom.py  clean.py  dnp.py  gerbers.py  get_ignore.py  globlib.py  impedance_map.py  init_project.py  kibuzzard_to_graphic.py  loclib.py  logos.py  netlist.py  pcb_filter.py  pnp.py  prettify.py  rename.py  sch.py  set_drc.py  stackup_export.py  step.py  version.py  wireframe.py
src/common/: kicad_project.py  kmake_helper.py
src/logos/: oshw
tests/: kmake_test_common.py  migrate_project.py  test_EXAMPLE.py  test_auxorigin.py  test_bom.py  test_clean.py  test_commands_gerber.py  test_dnp.py  test_get_ignore.py  test_git_ignore.py  test_globlib.py  test_impedance.py  test_init_project.py  test_kibuzzard_to_graphic.py  test_loclib.py  test_logos.py  test_netlist.py  test_nop.py  test_pcb_filter.py  test_pnp.py  test_rename.py  test_sch.py  test_stackup_export.py  test_step.py  test_version.py  test_whitespace.py  test_wireframe.py
tests/designs/: designs.list
tests/test_project/: .gitignore  README.md  connectors.kicad_sch  fp-lib-table  power.kicad_sch  (+7 more)
(+39 files in other folders)
